# MPP

./: README.md  pyproject.toml
data_pmi/: pmi_features.csv
notebooks/: cadtoseq_testing.ipynb
scripts/: ablation_study.py  ablation_visualization.py  cross_validation.py  pmi_encoding.py  pmi_group_analyzer.py  step_sets_distribution.py
src/mpp/: constants.py
src/mpp/ml/datasets/: datamodules.py  datamodules_pmi.py  fabricad.py  tkms.py  tkms_pmi.py
src/mpp/ml/metrics/: sequences.py
src/mpp/ml/models/ablation_study/: analyze_ablation_results.py  cli.py  pmi_ablation_study.py
src/mpp/ml/models/classifier/: VoxelEncoder.py  cadtostep.py  cadtostepset_with_pmi.py  multilabel_classifier.py  unified_process_classifier.py
src/mpp/ml/models/encoder/: transformer_feature_encoder.py
src/mpp/ml/models/regressor/: process_time_regressor.py  trsfm_encoder_regressor.py
src/mpp/ml/models/sequence/: cadtoseq_module.py  vecset_transformer.py
src/mpp/ml/pipelines/cadtoseq/: model_input_to_tuned_model.py
src/mpp/ml/pipelines/cadtostepset/: model_input_to_tuned_model.py  model_input_to_tuned_model_pmi.py  unified_training.py
src/mpp/ml/pipelines/process-time-regression/: model_input_to_tuned_model.py
