[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpp"
version = "0.1.0"
description = "mpp"
authors = [{ name = "Kruse Michel", email = "michel.kruse@fh-kiel.de" }]
requires-python = ">=3.10"

dependencies = [
  "torch>=2.1.0",
  "pytorch-lightning>=2.1.0",
  "hydra-core>=1.3.2",
  "mlflow>=2.10.0",
  "scikit-learn",
  "torchvision",
  "pandas",
  "matplotlib",
  "seaborn",
  "optuna>=4.4.0",
  "ipykernel>=6.30.1",
  "jupyter>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff",
    "ipython",
    "mypy",
    "black",
    "pre-commit",
]
notebook = [
    "jupyterlab",
    "ipykernel",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "internal"
url = "https://proget.tkms.net/pypi/public_pypi/simple"
default = true
